--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<p class="text-3xl">Hello there</p>
-<button class="btn btn-outline btn-circle">Daisy UI button</button> 
+<app-main-map></app-main-map>
