--- a/src/app/core/main-map/main-map.component.html
+++ b/src/app/core/main-map/main-map.component.html
@@ -1,3 +1,6 @@
-<div [ngStyle]="{'display':'flex', 'justify-content':'center', 'width':'100%'}">
+<div class="map-image" [ngStyle]="{'display':'flex', 'justify-content':'center', 'width':'100%'}">
+    <img #mapImage src="assets/SFUpic.png" [ngStyle]="{'position':'absolute', 'max-height':'90%', 'overflow':'hidden'}">
+</div>
+<div class="map-image" [ngStyle]="{'display':'flex', 'justify-content':'center', 'width':'100%'}">
     <img #mapImage src="assets/SFUpic.png" [ngStyle]="{'position':'absolute', 'max-height':'90%', 'overflow':'hidden'}">
 </div>
