--- a/src/app/core/map-content/map-content.component.html
+++ b/src/app/core/map-content/map-content.component.html
@@ -1,2 +1,2 @@
 <app-main-map (mapPosition)="printChild($event)"></app-main-map>
-<app-shader></app-shader>
+<!-- <app-shader [ShaderPosition]="shaderPosition" [ShowShader]="showShader"></app-shader> -->
